[gd_scene load_steps=23 format=2]

[ext_resource path="res://level/LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://level/MouseArea.gd" type="Script" id=2]
[ext_resource path="res://level/Level.gd" type="Script" id=3]
[ext_resource path="res://level/editor/camera.gd" type="Script" id=4]
[ext_resource path="res://level/placement/Terrain.gd" type="Script" id=5]
[ext_resource path="res://music/editor_metal.ogg" type="AudioStream" id=6]
[ext_resource path="res://level/objects/terrain/icon.png" type="Texture" id=7]
[ext_resource path="res://level/editor/checker.png" type="Texture" id=8]
[ext_resource path="res://temp/editvalue.gd" type="Script" id=9]
[ext_resource path="res://level/editor/font.tres" type="DynamicFont" id=10]
[ext_resource path="res://level/editor/TopPanel.gd" type="Script" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.628931, 0.965409 )
colors = PoolColorArray( 1, 0.282353, 0, 1, 1, 0.727738, 0.306904, 1, 1, 0.74902, 0.321569, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 513

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 0.301961, 0.0117647, 1, 1, 0.745098, 0.317647, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="StyleBoxTexture" id=6]
texture = SubResource( 5 )
region_rect = Rect2( 0, 0, 2048, 1 )
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 22.0
expand_margin_bottom = 4.0

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.188235, 0.105882, 0.419608, 1, 0.0901961, 0.0705882, 0.0941176, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )
width = 512

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 2

[sub_resource type="GDScript" id=10]
script/source = "tool
extends TextureRect

export var speed : float

func _physics_process(_delta):
	rect_position += Vector2(speed, speed)
	if rect_position.x > 0:
		rect_position = Vector2(-16, -16)
"

[sub_resource type="GDScript" id=11]
script/source = "tool
extends TextureRect

export var speed : float

func _physics_process(_delta):
	rect_position += Vector2(-speed, speed)
	if rect_position.x < -32:
		rect_position = Vector2(0, -32)
"

[node name="LevelEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="MouseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 524288
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )
move_speed = 6.0
fast_speed = 14.0
zoom_speed = 0.02
cursor_speed = 10.0

[node name="Placement" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Level" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 99

[node name="MousePermitted" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 512.0
margin_bottom = 288.0
color = Color( 0.196078, 0.92549, 0.411765, 0.192157 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TopPanel" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
speed = 8.0

[node name="Panel" type="Panel" parent="CanvasLayer/TopPanel"]
modulate = Color( 0.905882, 0.898039, 1, 1 )
margin_top = -3.39685
margin_right = 513.0
margin_bottom = 34.6031
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TopPanel"]
margin_top = 35.0
margin_right = 513.0
margin_bottom = 36.0
rect_scale = Vector2( 1, 4 )
mouse_filter = 2
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="CanvasLayer/TopPanel"]
margin_top = 4.0
margin_right = 512.0
margin_bottom = 44.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TopPanel/Buttons"]
margin_right = 504.0
margin_bottom = 25.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platforms" type="Button" parent="CanvasLayer/TopPanel/Buttons/HBoxContainer"]
margin_left = 40.0
margin_right = 119.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "Platforms"

[node name="Terrain" type="Button" parent="CanvasLayer/TopPanel/Buttons/HBoxContainer"]
margin_left = 127.0
margin_right = 188.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "Terrain"

[node name="Object" type="Button" parent="CanvasLayer/TopPanel/Buttons/HBoxContainer"]
margin_left = 196.0
margin_right = 258.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "Objects"

[node name="Copy" type="Button" parent="CanvasLayer/TopPanel/Buttons/HBoxContainer"]
margin_left = 266.0
margin_right = 354.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "Copy Level"

[node name="Paste" type="Button" parent="CanvasLayer/TopPanel/Buttons/HBoxContainer"]
margin_left = 362.0
margin_right = 455.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "Paste Level"

[node name="Test" type="Button" parent="CanvasLayer/TopPanel/Buttons/HBoxContainer"]
margin_left = 463.0
margin_right = 504.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 24 )
focus_mode = 0
custom_fonts/font = ExtResource( 10 )
enabled_focus_mode = 0
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
target_path = NodePath("../../Level")
prefix = "BG: "
value = "background_id"
max_val = 3

[node name="Label" type="Label" parent="CanvasLayer/BG"]
anchor_top = -0.00625
anchor_bottom = -0.00625
margin_left = 27.9681
margin_top = 259.442
margin_right = 67.9681
margin_bottom = 278.442
custom_fonts/font = ExtResource( 10 )
text = "BG: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus" type="Button" parent="CanvasLayer/BG"]
margin_left = 7.22364
margin_top = 255.782
margin_right = 24.2236
margin_bottom = 275.782
focus_mode = 0
enabled_focus_mode = 0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus" type="Button" parent="CanvasLayer/BG"]
margin_left = 69.7184
margin_top = 255.782
margin_right = 89.7184
margin_bottom = 275.782
focus_mode = 0
enabled_focus_mode = 0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FG" type="Control" parent="CanvasLayer"]
margin_top = -24.0
margin_right = 40.0
margin_bottom = 16.0
mouse_filter = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
target_path = NodePath("../../Level")
prefix = "FG: "
value = "foreground_id"
max_val = 2

[node name="Label" type="Label" parent="CanvasLayer/FG"]
anchor_top = -0.00625
anchor_bottom = -0.00625
margin_left = 27.9681
margin_top = 259.442
margin_right = 67.9681
margin_bottom = 278.442
custom_fonts/font = ExtResource( 10 )
text = "FG: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus" type="Button" parent="CanvasLayer/FG"]
margin_left = 7.22364
margin_top = 255.782
margin_right = 24.2236
margin_bottom = 275.782
focus_mode = 0
enabled_focus_mode = 0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus" type="Button" parent="CanvasLayer/FG"]
margin_left = 69.7184
margin_top = 255.782
margin_right = 89.7184
margin_bottom = 275.782
focus_mode = 0
enabled_focus_mode = 0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect" type="Control" parent="CanvasLayer"]
margin_top = -48.0
margin_right = 40.0
margin_bottom = -8.0
mouse_filter = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
target_path = NodePath("../../Level")
prefix = "FX: "
value = "effect_id"
max_val = 2

[node name="Label" type="Label" parent="CanvasLayer/Effect"]
anchor_top = -0.00625
anchor_bottom = -0.00625
margin_left = 27.9681
margin_top = 259.442
margin_right = 67.9681
margin_bottom = 278.442
custom_fonts/font = ExtResource( 10 )
text = "FX: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus" type="Button" parent="CanvasLayer/Effect"]
margin_left = 7.22364
margin_top = 255.782
margin_right = 24.2236
margin_bottom = 275.782
focus_mode = 0
enabled_focus_mode = 0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus" type="Button" parent="CanvasLayer/Effect"]
margin_left = 69.7184
margin_top = 255.782
margin_right = 89.7184
margin_bottom = 275.782
focus_mode = 0
enabled_focus_mode = 0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="CanvasLayer"]
margin_left = 20.5946
margin_top = 45.1353
margin_right = 175.595
margin_bottom = 236.135
mouse_filter = 2
input_pass_on_modal_close_click = false
custom_styles/panel = SubResource( 6 )
custom_fonts/title_font = ExtResource( 10 )
custom_constants/scaleborder_size = 4
popup_exclusive = true
window_title = "Properties"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/WindowDialog"]
stream = ExtResource( 6 )
volume_db = -2.0
autoplay = true
bus = "Music"

[node name="Panel" type="Panel" parent="CanvasLayer/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.18921
margin_bottom = -1.18921
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 15
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Icon" type="Sprite" parent="CanvasLayer"]
position = Vector2( 480, 260 )
texture = ExtResource( 7 )

[node name="LineDone" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 404.926
margin_top = 255.782
margin_right = 450.926
margin_bottom = 277.782
custom_fonts/font = ExtResource( 10 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = -99

[node name="TextureRect" type="TextureRect" parent="CanvasLayer3"]
margin_top = 288.0
margin_right = 288.0
margin_bottom = 800.0
rect_rotation = -90.0
texture = SubResource( 8 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer3"]
self_modulate = Color( 0.937255, 0.498039, 0.498039, 0.0235294 )
material = SubResource( 9 )
margin_left = -11.25
margin_top = -11.25
margin_right = 516.75
margin_bottom = 292.75
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
script = SubResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
speed = 0.25

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer3"]
self_modulate = Color( 0.498039, 0.513726, 0.937255, 0.0156863 )
material = SubResource( 9 )
margin_left = -19.0
margin_top = -13.0
margin_right = 253.0
margin_bottom = 147.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
script = SubResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
speed = 0.25

[connection signal="area_entered" from="MouseArea" to="." method="cursor_entered"]
[connection signal="area_exited" from="MouseArea" to="." method="cursor_exited"]
[connection signal="mouse_entered" from="CanvasLayer/MousePermitted" to="." method="safe_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MousePermitted" to="." method="safe_exited"]
[connection signal="pressed" from="CanvasLayer/TopPanel/Buttons/HBoxContainer/Platforms" to="." method="platform_switch"]
[connection signal="pressed" from="CanvasLayer/TopPanel/Buttons/HBoxContainer/Terrain" to="." method="terrain_switch"]
[connection signal="pressed" from="CanvasLayer/TopPanel/Buttons/HBoxContainer/Object" to="." method="object_switch"]
[connection signal="pressed" from="CanvasLayer/TopPanel/Buttons/HBoxContainer/Copy" to="." method="save_level"]
[connection signal="pressed" from="CanvasLayer/TopPanel/Buttons/HBoxContainer/Paste" to="." method="load_level"]
[connection signal="pressed" from="CanvasLayer/TopPanel/Buttons/HBoxContainer/Test" to="." method="test_level"]
[connection signal="pressed" from="CanvasLayer/BG/minus" to="CanvasLayer/BG" method="decrease"]
[connection signal="pressed" from="CanvasLayer/BG/plus" to="CanvasLayer/BG" method="increase"]
[connection signal="pressed" from="CanvasLayer/FG/minus" to="CanvasLayer/FG" method="decrease"]
[connection signal="pressed" from="CanvasLayer/FG/plus" to="CanvasLayer/FG" method="increase"]
[connection signal="pressed" from="CanvasLayer/Effect/minus" to="CanvasLayer/Effect" method="decrease"]
[connection signal="pressed" from="CanvasLayer/Effect/plus" to="CanvasLayer/Effect" method="increase"]
